--- a/transform-activity/index.html
+++ b/transform-activity/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>Transform Lab</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="activity.css">
-  </head>
+    <link rel="stylesheet" href="transform-activity\activity.css">
+      </head>
   <body>
-    <div class="container">
+        <div class="container">
       <h1>Tilted Designs</h1>
       <div class="wrapper">
         <main>
